--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     </li>
                 </ul>
             </div>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between header-middle">
                 <!-- <div class="nav-top flex"> -->
-                    <h1 class="best-tag"><b> BEST</b><b class="tour"> TOUR</b><b> PLAN</b></h1>
+                    <h1 class="best-tag"><b> BEST</b><b class="pink-title"> TOUR</b><b> PLAN</b></h1>
                     <div class="search-contain d-flex">
                         <div>
                             <input type="text" name="" id="" placeholder="Search location" class="search-box">
                         </div>
-                        <button class="btn-search pink-color-box"><i class="fa fa-search" aria-hidden="true"></i></i></button>
+                        <button class="btn-search btn pink-color-box"><i class="fa fa-search" aria-hidden="true"></i></i></button>
                     </div>
                     <div class="d-flex profile-user">
                         <div>
@@ -56,54 +56,40 @@
             </div>
         </div>
     </header>
-    <nav class="navbar navbar-expand-lg blue-color-box">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">ALL DEALS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">HOTELS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ACTIVITIES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">HOTEL DAY PACKAGES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">RESTAURANTS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">EVENTS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">RODRIGUES</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <nav>
+    <nav class="navbar navbar-expand-lg blue-color-box py-3">
         <div class="container">
-            <div class="row">
-                <div class="hamburger" onclick="hamburg()"><i class="fa fa-bars" aria-hidden="true"></i></div>
-                <div class="nav-a">
-                    <a href="">ALL DEALS</a>
-                    <a href="">HOTELS</a>
-                    <a href="">ACTIVITIES</a>
-                    <a href="">HOTEL DAY PACKAGES</a>
-                    <a href="">RESTAURANTS</a>
-                    <a href="">EVENTS</a>
-                    <a href="">RODRIGUES</a>
-                </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ">
+                <li class="nav-item pr-5">
+                  <a class="nav-link" href="#">ALL DEALS</a>
+                </li>
+                <li class="nav-item pr-5">
+                  <a class="nav-link" href="#">HOTELS</a>
+                </li>
+                <li class="nav-item pr-5">
+                  <a class="nav-link" href="#">ACTIVITIES</a>
+                </li>
+                <li class="nav-item pr-5">
+                  <a class="nav-link" href="#">HOTEL DAY PACKAGES</a>
+                </li>
+                <li class="nav-item pr-5">
+                  <a class="nav-link" href="#">RESTAURANTS</a>
+                </li>
+                <li class="nav-item pr-5">
+                  <a class="nav-link" href="#">EVENTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">RODRIGUES</a>
+                </li>
+              </ul>
             </div>
         </div>
-    </nav>
+      </nav>
     <main>
-        <section class="desc-section">
+        <section class="desc-section py-5">
             <div class="container">
                 <div>
                     <div>
@@ -118,28 +104,27 @@
                         <div class="row">
                             <div class="col-sm-9">
                                 <div class="d-flex">
-                                    <h1 class="grand">GRAND HILTON HOTELS</h1>
-                                    <div class="flash-offer-top pink-color-box b-rad-5">Flash Offer</div>
+                                    <h1 class="f-s-20">GRAND HILTON HOTELS</h1>
+                                    <div class="flash-offer-top pink-color-box b-rad-5 f-s-12">Flash Offer</div>
                                 </div>
                                 <p class="menu-info-two">Half-Board/ All Inclusive + Complimentary Activities + Child
                                     Stays Free</p>
                             </div>
                             <div class="col-sm-3">
-                                <div class="pink-color-box w-10px">
-                                    <p>User Rating</p>
-                                    <p>4.5/5</p>
+                                <div class="pink-color-box rate-div text-center rounded-top rounded-bottom ml-auto">
+                                    <p class="f-s-12 m-0">User Rating</p>
+                                    <p class="f-s-20 m-0">4.5/5</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row desc-box">
                         <div class="desc-img-div col-sm-8">
-                            <img src="images/section-1/Rectangle 5.jpg" alt="" class="desc-img-div-img img-fluid">
+                            <img src="images/section-1/Rectangle 5.jpg" alt="" class="desc-img-div-img img-fluid ">
                         </div>
                         <div class="map-card col-sm-4">
                             <div>
-                                <div class="">
-                                    <div class="card desc-card">
+                                    <div class="card desc-card blue-color-box">
                                         <div class="card-body">
                                             <div class="d-flex card-details">
                                                 <div class="">
@@ -171,14 +156,13 @@
                                                 Options</button>
                                         </div>
                                     </div>
-                                </div>
                             </div>
-                            <div class="map">
+                            <div class="map mt-3">
                                 <div class="map">
                                     <img src="images/section-1/map.png" alt="">
                                 </div>
-                                <div class="desc-ul-div">
-                                    <ul class="d-flex desc-ul pl-1">
+                                <div class="desc-ul-div mx-auto">
+                                    <ul class="d-flex desc-ul pl-1 justify-content-between">
                                         <li>Satellite</li>
                                         <li>Aerial</li>
                                         <li class="li-blue">Street View</li>
@@ -307,15 +291,15 @@
                 </div>
             </div>
         </section>
-        <section class="service-section">
+        <section class="service-section py-5">
             <div class="container">
                 <h3 class="package-title">OTHER PACKAGES</h3>
                 <div class="row">
                     <div class="col-sm-8">
-                        <div class="card d-sm-flex flex-row">
+                        <div class="card d-sm-flex flex-row border-0">
                             <img class="card-img-top" src="images/section-2/image1.jpg" alt="Card image cap">
                             <div class="card-body col-sm-6 blue-color-box">
-                                <span>
+                                <span class="mt-2">
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -323,7 +307,7 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
                                 <h4>Hotel Blue Haven</h4>
-                                <p class="about-hotel">
+                                <p class="about-hotel mt-2">
                                     Aute quis duis excepteur excepteur ipsum cat
                                     eiusmod consectetur enim laborum magna llit.
                                     Ipsum est fugiat velit ea llamco do esse ut
@@ -359,7 +343,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card">
+                        <div class="card border-0">
                             <img class="card-img-top" src="images/section-2/image2.jpg" alt="Card image cap">
                             <div class="card-body blue-color-box">
                                 <h4>LUX* Belle Mare</h4>
@@ -392,7 +376,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
-                        <div class="card">
+                        <div class="card border-0">
                             <img class="card-img-top" src="images/section-2/image3.jpg" alt="Card image cap">
                             <div class="card-body blue-color-box">
                                 <h4>White Palace</h4>
@@ -423,7 +407,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card">
+                        <div class="card border-0">
                             <img class="card-img-top" src="images/section-2/image4.jpg" alt="Card image cap">
                             <div class="card-body blue-color-box">
                                 <h4>Luxury Place</h4>
@@ -454,7 +438,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card">
+                        <div class="card border-0">
                             <img class="card-img-top" src="images/section-2/image5.jpg" alt="Card image cap">
                             <div class="card-body blue-color-box">
                                 <h4>Hotel Five Star</h4>
@@ -487,7 +471,7 @@
                 </div>
             </div>
         </section>
-        <section class="review-section">
+        <section class="review-section py-5">
             <div class="container text-center">
                 <h3 class="mb-5">WHAT PEOPLE THINK ABOUT US</h3>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -496,24 +480,24 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner mt-5">
+                    <div class="carousel-inner mt-5 p-5">
                         <div class="carousel-item active mt-5">
                             <div class="review-container bg-white m-auto">
                                 <img src="images/section-3/quote-start.png" alt="">
-                                <div class="reviewer-detail">
+                                <div class="reviewer-detail p-1">
                                     <img src="images/section-3/Ellipse 3.png" alt="">
                                     <p class="pink-title">Megan Fox</p>
                                     <p>Stayed 18 Nov, 2018</p>
                                     <span>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
                                     </span>
                                 </div>
-                                <div class="review-note-div mt-5">
-                                    <p class="review-note mt-5">
+                                <div class="review-note-div mt-5 p-5">
+                                    <p class="review-note mt-5 mx-auto p-3">
                                         It was very nice hotel with cleanliness.
                                         Staff behavior was good and polite. They welcome us very well.
                                         Issue was only that Lift was not in working and we
@@ -532,7 +516,7 @@
                         <div class="carousel-item mt-5">
                             <div class="review-container bg-white m-auto mt-5">
                                 <img src="images/section-3/quote-start.png" alt="">
-                                <div class="reviewer-detail">
+                                <div class="reviewer-detail p-1">
                                     <img src="images/section-3/Ellipse 3.png" alt="">
                                     <p class="pink-name">Megan Fox</p>
                                     <p>Stayed 18 Nov, 2018</p>
@@ -544,8 +528,8 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </span>
                                 </div>
-                                <div class="review-note-div mt-5">
-                                    <p class="review-note mt-5">
+                                <div class="review-note-div mt-5 p-5">
+                                    <p class="review-note mt-5 mx-auto p-3">
                                         It was very nice hotel with cleanliness.
                                         Staff behavior was good and polite. They welcome us very well.
                                         Issue was only that Lift was not in working and we
@@ -564,7 +548,7 @@
                         <div class="carousel-item mt-5">
                             <div class="review-container bg-white m-auto">
                                 <img src="images/section-3/quote-start.png" alt="">
-                                <div class="reviewer-detail">
+                                <div class="reviewer-detail p-1">
                                     <img src="images/section-3/Ellipse 3.png" alt="">
                                     <p class="pink-name">Megan Fox</p>
                                     <p>Stayed 18 Nov, 2018</p>
@@ -576,8 +560,8 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </span>
                                 </div>
-                                <div class="review-note-div mt-5">
-                                    <p class="review-note mt-5">
+                                <div class="review-note-div mt-5 p-3">
+                                    <p class="review-note mt-5 mx-auto p-3">
                                         It was very nice hotel with cleanliness.
                                         Staff behavior was good and polite. They welcome us very well.
                                         Issue was only that Lift was not in working and we
@@ -605,7 +589,7 @@
                 </div>
             </div>
         </section>
-        <section class="newsletter-section">
+        <section class="newsletter-section py-5">
             <div class="container">
                 <div class="row col-sm-6">
                     <div>
@@ -613,9 +597,9 @@
                         <h2>NEWSLETTER</h2>
                     </div>
                     <div class="send-div col-sm-6">
-                        <label for="" class=" d-flex">
+                        <label for="" class=" d-flex ml-auto">
                             <div>
-                                <input type="text" placeholder="Your Email Address" class="send-box">
+                                <input type="text" placeholder="Your Email Address" class="send-box p-2">
                             </div>
                             <button class="btn pink-color-box b-rad-5 btn-send">Send</button>
                         </label>
@@ -623,7 +607,7 @@
                 </div>
             </div>
         </section>
-        <section class="activities">
+        <section class="activities py-5">
             <div class="container">
                 <h3>OTHER ACTIVITIES</h3>
                 <div class="grid-activity row">
@@ -659,7 +643,7 @@
             </div>
         </section>
     </main>
-    <footer class="blue-color-box">
+    <footer class="blue-color-box py-5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
