--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between py-3 footer-none">
                 <div>
                     <p>Questions? Need Help? <a href="tel:+(+123) 456 1500" class="tel">Call us on (+123) 456 1500</a>
                     </p>
@@ -366,19 +366,19 @@
                             <div class="card-body blue-color-box">
                                 <h4>LUX* Belle Mare</h4>
                                 <div class="d-flex">
-                                    <div><img src="images/map-pin.png" alt=""></div>
+                                    <div class="mr-2"><img src="images/map-pin.png" alt=""></div>
                                     <div>
                                         <p>1749 Wheeler Ridge Delaware</p>
                                     </div>
                                 </div>
                                 <div class="d-flex">
-                                    <div><img src="images/user.png" alt=""></div>
+                                    <div class="mr-2"><img src="images/user.png" alt=""></div>
                                     <div>
                                         <p>2 x Guests</p>
                                     </div>
                                 </div>
                                 <div class="d-flex del">
-                                    <div><img src="images/room.png" alt=""></div>
+                                    <div class="mr-2"><img src="images/room.png" alt=""></div>
                                     <div>
                                         <p>1 x Room</p>
                                     </div>
@@ -403,19 +403,19 @@
                             <div class="card-body blue-color-box">
                                 <h4>White Palace</h4>
                                 <div class="d-flex">
-                                    <div><img src="images/map-pin.png" alt=""></div>
+                                    <div class="mr-2"><img src="images/map-pin.png" alt=""></div>
                                     <div>
                                         <p>1749 Wheeler Ridge Delaware</p>
                                     </div>
                                 </div>
                                 <div class="d-flex">
-                                    <div><img src="images/user.png" alt=""></div>
+                                    <div class="mr-2"><img src="images/user.png" alt=""></div>
                                     <div>
                                         <p>2 x Guests</p>
                                     </div>
                                 </div>
                                 <div class="d-flex del">
-                                    <div><img src="images/room.png" alt=""></div>
+                                    <div class="mr-2"><img src="images/room.png" alt=""></div>
                                     <div>
                                         <p>1 x Room</p>
                                     </div>
@@ -641,28 +641,28 @@
             <div class="container">
                 <h3 class="text-center f-s-20 mb-3">OTHER ACTIVITIES</h3>
                 <div class="grid-activity row">
-                    <div class="col-sm-3 grid-activity-item">
+                    <div class="col-sm-3 grid-activity-item mb-3">
                         <div class="activity-decs">
                             <p>The curious corner of chamarel</p>
                             <button class="btn pink-color-box b-rad-5">Book Now</button>
                         </div>
                         <img src="images/section-5/image1.jpg" alt="" class="activity-image position-relative">
                     </div>
-                    <div class="col-sm-3 grid-activity-item">
+                    <div class="col-sm-3 grid-activity-item mb-3">
                         <div class="activity-decs">
                             <p>Gymkhana club golf course</p>
                             <button class="btn pink-color-box b-rad-5">Book Now</button>
                         </div>
                         <img src="images/section-5/image2.jpg" alt="" class="activity-image position-relative">
                     </div>
-                    <div class="col-sm-3 grid-activity-item">
+                    <div class="col-sm-3 grid-activity-item mb-3">
                         <div class="activity-decs">
                             <p>Tamarind falls hiking trip - full day</p>
                             <button class="btn pink-color-box b-rad-5">Book Now</button>
                         </div>
                         <img src="images/section-5/image3.jpg" alt="" class="activity-image position-relative">
                     </div>
-                    <div class="col-sm-3 grid-activity-item">
+                    <div class="col-sm-3 grid-activity-item mb-3">
                         <div class="activity-decs">
                             <p>The blue marine discovery quest</p>
                             <button class="btn pink-color-box b-rad-5">Book Now</button>
