--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                                             <li class="f-s-14 ml-4">LUX* Me Spa</li>
                                         </ul>
                                         <ul class="ul-li col-sm-6">
-                                            <li class="f-s-14">Luxurious 5-Star Hotel</li>
-                                            <li class="f-s-14">Banyan An Adult Only Zone</li>
+                                            <li class="f-s-14 mobile-li">Luxurious 5-Star Hotel</li>
+                                            <li class="f-s-14 mobile-li">Banyan An Adult Only Zone</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -223,7 +223,7 @@
                                                 at Grand Hilton Hotel.</li>
                                         </ul>
                                         <ul class="date col-sm-6">
-                                            <li class="f-s-14">10th March - 30th April 2020</li>
+                                            <li class="f-s-14 mobile-li">10th March - 30th April 2020</li>
                                         </ul>
                                     </div>
                                     <div class="row">
