--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <!-- </div> -->
                             <div class="position-relative mb-3">
                                 <div class="position-relative">
-                                    <img src="images/section-1/map.png" alt="">
+                                    <img src="images/section-1/map.png" class="w-oh" alt="">
                                 </div>
                                 <div class="desc-ul-div mx-auto">
                                     <ul class="d-flex desc-ul pl-1 justify-content-between">
