--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
     </header>
     <nav class="navbar navbar-expand-lg blue-color-box py-3">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon bg-white"></span>
+                <span class="navbar-toggler-icon">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ">
@@ -129,11 +131,11 @@
                         </div>
                     </div>
                     <div class="row desc-box">
-                        <div class="desc-img-div col-sm-8 mb-3">
+                        <div class="desc-img-div col-lg-8 mb-3">
                             <img src="images/section-1/Rectangle 5.jpg" alt="" class="desc-img-div-img img-fluid ">
                         </div>
-                        <div class="map-card col-sm-4">
-                            <!-- <div> -->
+                        <div class="map-card col-lg-4">
+                            <div class="map-contain w-100 d-flex">
                             <div class="card desc-card blue-color-box mb-3">
                                 <div class="card-body">
                                     <div class="d-flex card-details">
@@ -166,10 +168,9 @@
                                         Options</button>
                                 </div>
                             </div>
-                            <!-- </div> -->
                             <div class="position-relative mb-3">
-                                <div class="position-relative">
-                                    <img src="images/section-1/map.png" class="w-100" alt="">
+                                <div class="position-relative h-100">
+                                    <img src="images/section-1/map.png" class="w-100 h-100" alt="">
                                 </div>
                                 <div class="desc-ul-div mx-auto">
                                     <ul class="d-flex desc-ul pl-1 justify-content-between">
@@ -178,6 +179,7 @@
                                         <li class="li-blue">Street View</li>
                                     </ul>
                                 </div>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -306,8 +308,8 @@
                 <h3 class="package-title text-center f-s-20 mb-3">OTHER PACKAGES</h3>
                 <div class="row">
                     <div class="col-lg-8 col-md-12 mb-4">
-                        <div class="card border-0">
-                            <div class="no-gutters row">
+                        <div class="card h-100 border-0">
+                            <div class="no-gutters h-100 row">
                                 <div class="col-md-6">
                                     <div
                                         class="flash-offer p-1 position-absolute pink-color-box round-0 f-s-12 d-flex align-items-center">
@@ -531,8 +533,8 @@
                                         <i class="fa fa-star"></i>
                                     </span>
                                 </div>
-                                <div class="review-note-div mt-5 py-5">
-                                    <p class="review-note mt-5 mx-auto py-3">
+                                <div class="review-note-div mt-5 py-5 px-1">
+                                    <p class="review-note mt-5 mx-auto py-3 px-1">
                                         It was very nice hotel with cleanliness.
                                         Staff behavior was good and polite. They welcome us very well.
                                         Issue was only that Lift was not in working and we
@@ -563,8 +565,8 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </span>
                                 </div>
-                                <div class="review-note-div mt-5 p-5">
-                                    <p class="review-note mt-5 mx-auto p-3">
+                                <div class="review-note-div mt-5 py-5 px-1">
+                                    <p class="review-note mt-5 mx-auto py-3 px-1">
                                         It was very nice hotel with cleanliness.
                                         Staff behavior was good and polite. They welcome us very well.
                                         Issue was only that Lift was not in working and we
@@ -595,8 +597,8 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </span>
                                 </div>
-                                <div class="review-note-div mt-5 p-3">
-                                    <p class="review-note mt-5 mx-auto p-3">
+                                <div class="review-note-div mt-5 py-5 px-1">
+                                    <p class="review-note mt-5 mx-auto py-3 px-1">
                                         It was very nice hotel with cleanliness.
                                         Staff behavior was good and polite. They welcome us very well.
                                         Issue was only that Lift was not in working and we
